<resources>
    <string name="app_name">Pollera</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">LOG IN</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_poll">Create a poll</string>
    <string name="start_poll">Start a poll</string>
    <string name="time">Time in minutes</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="select_poll">Select a poll</string>

    <string name="q1">Question 1</string>
    <string name="q2">Question 2</string>
    <string name="q3">Question 3</string>
    <string name="input_answer">Enter the answers, separating each answer with a new line (ENTER)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poll_name">Poll name</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="finish_poll">Finish Poll</string>
    <string name="my_tasks">My Tasks</string>
</resources>