<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="146dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/signUpEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/signUpEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="Logo" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/email"
        android:ems="10"
        android:hint="@string/email"
        android:imeActionLabel="Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/custom_blue2"
        app:layout_constraintEnd_toEndOf="@+id/signUpName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/signUpName"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/signUpName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/name"
        android:ems="10"
        android:hint="@string/name"
        android:imeActionLabel="Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/custom_blue2"
        app:layout_constraintEnd_toEndOf="@+id/signUpPass"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/signUpPass"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmail" />

    <EditText
        android:id="@+id/signUpPass"
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/custom_blue2"
        app:layout_constraintEnd_toEndOf="@+id/confSignUpPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confSignUpPass"
        app:layout_constraintTop_toBottomOf="@+id/signUpName"
        android:autofillHints="@string/password" />

    <EditText
        android:id="@+id/confSignUpPass"
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:autofillHints="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@color/custom_blue2"
        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/signUpPass" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:backgroundTint="@color/custom_blue"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/loginButton_signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/loginButton_signup"
        app:layout_constraintTop_toBottomOf="@+id/confSignUpPass" />

    <Button
        android:id="@+id/loginButton_signup"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:background="@color/none"
        android:ems="10"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="#2962FF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />


</androidx.constraintlayout.widget.ConstraintLayout>