<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <!-- AppBar layout for using Toolbar as AppBar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- ToolBar widget -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/custom_purple"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Pollera"
                app:titleTextColor="#ffff" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:textAlignment="center">

            <Button
                android:id="@+id/create_poll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="inherit"
                android:text="@string/create_poll"
                android:textAlignment="center" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/start_poll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_poll" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>



        <FrameLayout
            android:id="@+id/admin_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:contentDescription="@string/select_poll"
            app:layout_constraintTop_toTopOf="@+id/appBarLayout"
            tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>