<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.StartPollFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activePolls"
            android:layout_width="376dp"
            android:layout_height="385dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/listOfPolls"
            android:layout_width="345dp"
            android:layout_height="48dp"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/select_poll"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/startPollBtn"
            android:layout_width="121dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:text="@string/start_poll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.68"
            app:layout_constraintStart_toEndOf="@+id/time"
            app:layout_constraintTop_toBottomOf="@+id/listOfPolls" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select a poll"
            app:layout_constraintBottom_toTopOf="@+id/listOfPolls"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Started Polls"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startPollBtn" />

        <EditText
            android:id="@+id/time"
            android:layout_width="212dp"
            android:layout_height="55dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/time"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listOfPolls"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>