<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="keyboardHidden|orientation|screenSize|screenLayout"
    tools:context="ui.main.CreatePollFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="1dp">

        <EditText
            android:id="@+id/a3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/input_answer"
            android:inputType="textMultiLine"
            android:textColorHint="@color/custom_blue2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q3"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/q3"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/q3"
            android:inputType="textPersonName"
            android:textColorHint="@color/custom_blue2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a2" />

        <EditText
            android:id="@+id/a2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/input_answer"
            android:inputType="textMultiLine"
            android:textColorHint="@color/custom_blue2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q2" />

        <EditText
            android:id="@+id/q2"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/q2"
            android:inputType="textPersonName"
            android:textColorHint="@color/custom_blue2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a1" />

        <EditText
            android:id="@+id/newPollName"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Poll Name"
            android:inputType="textPersonName"
            android:textColorHint="@color/custom_blue2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/q1"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/q1"
            android:inputType="textPersonName"
            android:textColorHint="@color/custom_blue2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPollName" />

        <EditText
            android:id="@+id/a1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/input_answer"
            android:inputType="textMultiLine"
            android:textColorHint="@color/custom_blue2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q1" />

        <Button
            android:id="@+id/createNewPollBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/custom_purple"
            android:text="Create New Poll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a3"
            app:layout_constraintVertical_bias="0.108"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>